<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Stack Over Face</string>
    <string name="score">%1$d</string>
    <string name="high_score">High Score: %1$d</string>
    <string name="blink_to_play">Blink to Play</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="game_over">Game Over</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again</string>
    <string name="static_game_background">Static game background</string>
    <string name="background_music">Background Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="close">Close</string>
    <string name="vibration">Vibration</string>
    <string name="final_score">Score: %1$d</string>
    <string name="pause">Pause</string>
</resources>